# data_engineering

./: .gitignore  Makefile  README.md  main.py  pyproject.toml  requirements.txt
notebooks/: test.ipynb
project pipeline/: api_call.py
project_pipeline/: __init__.py  api_call.py  snowflake_job.py
