[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "project pipeline"
version = "0.0.1"
description = "ETS procedures from an api all the way to a BI presentation an a ML model"
authors = [
  { name = "roi flores, ivan morales, rafael takata, esteban valerio" },
]

readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    
]
requires-python = "~=3.13.0"


[tool.ruff]
line-length = 99
src = ["project pipeline"]
include = ["pyproject.toml", "project pipeline/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["project pipeline"]
force-sort-within-sections = true

